<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_splash"
    tools:context=".activity.SignupActivity">
    <Button
        android:id="@+id/btnArrowLeft"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/ic_arrow_left"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/btnArrowLeft"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/register_yourself"
        android:textColor="#58D68D"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnArrowLeft"
        android:layout_margin="30dp"
        android:background="@drawable/et_custom"
        android:hint="@string/name_sign_up"
        android:fontFamily="@font/roboto_regular"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_person_black_24dp"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etName"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:hint="@string/email_sign_up"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_email_black_24dp"/>

    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:hint="@string/mobile_no_sign_up"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_phone_android_black_24dp"/>
    <EditText
        android:id="@+id/etDelAddress"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/etMobileNo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:hint="@string/delivery_address"
        android:inputType="textMultiLine"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etDelAddress"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:hint="@string/password_sign_up"
        android:inputType="numberPassword"
        android:minLines="4"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_lock_black_24dp"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:hint="Confirm Password"
        android:inputType="numberPassword"
        android:minLines="4"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:drawableLeft="@drawable/ic_lock_black_24dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_custom"
        android:layout_margin="30dp"
        android:layout_below="@id/etConfirmPassword"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="25sp"/>


</RelativeLayout>

</ScrollView>